--- a/FinalProjDotNet/MainWindow.xaml
+++ b/FinalProjDotNet/MainWindow.xaml
@@ -4,206 +4,108 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FinalProjDotNet"
-        xmlns:wpfanimated = "http://wpfanimatedgif.codeplex.com"
+        xmlns:wpfanimated="http://wpfanimatedgif.codeplex.com"
         mc:Ignorable="d"
-        Title="MainWindow" Loaded="Window_Loaded" SizeToContent="WidthAndHeight" Height="550" Width="535" MinHeight="550" MinWidth="535" MaxHeight="550" MaxWidth="5535">
+        Title="MainWindow" Loaded="Window_Loaded" SizeToContent="WidthAndHeight" Height="550" Width="535" MinHeight="550" MinWidth="535" MaxHeight="550" MaxWidth="535">
 
-    <!--<Window.Resources>
-        <LinearGradientBrush x:Key="NormalBrush" StartPoint="0,0" EndPoint="0,1">
-            <GradientBrush.GradientStops>
-                <GradientStopCollection>
-                    <GradientStop Color="Black" Offset="0.0"/>
-                    <GradientStop Color="Black" Offset="1.0"/>
-                </GradientStopCollection>
-            </GradientBrush.GradientStops>
-        </LinearGradientBrush>
-
-        <SolidColorBrush x:Key="WindowBackgroundBrush" Color="Black" />
-
-        <ControlTemplate x:Key="ComboBoxToggleButton" TargetType="ToggleButton">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition />
-                    <ColumnDefinition Width="20" />
-                </Grid.ColumnDefinitions>
-                    <Border x:Name="Border" Grid.ColumnSpan="2" CornerRadius="2"
-                      Background="{StaticResource NormalBrush}"
-                      BorderThickness="1" />
-                                    <Border 
-                      Grid.Column="0"
-                      CornerRadius="2,0,0,2" 
-                      Margin="1" 
-                      Background="{StaticResource WindowBackgroundBrush}" 
-                      BorderThickness="0,0,1,0" />
-                      <Path 
-                      x:Name="Arrow"
-                      Grid.Column="1"     
-                      HorizontalAlignment="Center"
-                      VerticalAlignment="Center"
-                      Data="M 0 0 L 4 4 L 8 0 Z"/>
-            </Grid>
-        </ControlTemplate>
-
-        <ControlTemplate x:Key="ComboBoxTextBox" TargetType="TextBox">
-            <Border x:Name="PART_ContentHost" Focusable="False" Background="{TemplateBinding Background}" />
-        </ControlTemplate>
-
-
-        <Style x:Key="{x:Type ComboBox}" TargetType="ComboBox">
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="ComboBox">
-                        <Grid>
-                            <ToggleButton 
-         Name="ToggleButton" 
-         Template="{StaticResource ComboBoxToggleButton}" 
-         Grid.Column="2" 
-         Focusable="false"
-         IsChecked="{Binding Path=IsDropDownOpen,Mode=TwoWay,RelativeSource={RelativeSource TemplatedParent}}"
-         ClickMode="Press">
-                            </ToggleButton>
-                            <ContentPresenter
-        Name="ContentSite"
-        IsHitTestVisible="False" 
-        Margin="3,3,23,3"
-        VerticalAlignment="Center"
-        HorizontalAlignment="Left" />
-                            <TextBox x:Name="PART_EditableTextBox"
-         Style="{x:Null}" 
-         Template="{StaticResource ComboBoxTextBox}" 
-         HorizontalAlignment="Left" 
-         VerticalAlignment="Center" 
-         Margin="3,3,23,3"
-         Focusable="True" 
-         Background="Transparent"
-         Visibility="Hidden"
-         IsReadOnly="{TemplateBinding IsReadOnly}"/>
-                            <Popup 
-        Name="Popup"
-        Placement="Bottom"
-        IsOpen="{TemplateBinding IsDropDownOpen}"
-        AllowsTransparency="True" 
-        Focusable="False"
-        PopupAnimation="Slide">
-                                <Grid 
-          Name="DropDown"
-          SnapsToDevicePixels="True"                
-          MinWidth="{TemplateBinding ActualWidth}"
-          MaxHeight="{TemplateBinding MaxDropDownHeight}">
-                                    <Border 
-            x:Name="DropDownBorder"
-            Background="{StaticResource WindowBackgroundBrush}"
-            BorderThickness="1"/>
-                                    <ScrollViewer Margin="4,6,4,6" SnapsToDevicePixels="True">
-                                        <StackPanel IsItemsHost="True" KeyboardNavigation.DirectionalNavigation="Contained" />
-                                    </ScrollViewer>
-                                </Grid>
-                            </Popup>
-                        </Grid>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-            <Style.Triggers>
-            </Style.Triggers>
-        </Style>
-    </Window.Resources>-->
-    <!--<Window.Resources>
-        <Style x:Key="ComboBoxItemStyle1" TargetType="{x:Type ComboBoxItem}">
-            <Setter Property="SnapsToDevicePixels" Value="True"/>
-            <Setter Property="Padding" Value="4,1"/>
-            <Setter Property="Background" Value="Yellow"/>
-            -->
-    <!-- Custom value -->
-    <!--
-            <Setter Property="BorderBrush" Value="Yellow"/>
-            -->
-    <!-- Custom value -->
-    <!--
-            <Setter Property="BorderThickness" Value="1"/>
-            <Setter Property="Template">
-
-            </Setter>
-        </Style>
-    </Window.Resources>-->
-
-
-    <Grid >
-
+    <Window.Resources>
+        
+    </Window.Resources>
+    
+    <Grid>
+        <Grid.Resources>
+            <SolidColorBrush x:Key="TransparentIshBrush" Color="Black" Opacity="0.5" />
+            <Style TargetType="DataGrid">
+                <Setter Property="Background" Value="{StaticResource TransparentIshBrush}" />
+                <Setter Property="RowBackground" Value="{StaticResource TransparentIshBrush}" />
+            </Style>
+            <Style TargetType="Button">
+                <Setter Property="Background" Value="Black"/>
+                <Setter Property="Foreground" Value="#FF0068FF"/>
+                <Setter Property="Height" Value="50"/>
+                <Setter Property="FontSize" Value="20"/>
+                <Setter Property="BorderBrush" Value="#FF0C00FF"/>
+                <Setter Property="BorderThickness" Value="1,1,1,1"/>
+                <Setter Property="Width" Value="100"/>
+                <Setter Property="VerticalAlignment" Value="center"/>
+                <Setter Property="HorizontalAlignment" Value="Right"/>
+            </Style>
+        </Grid.Resources>
+        
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="auto" />
         </Grid.ColumnDefinitions>
+        
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
+            <RowDefinition Height="0.8*" />
             <RowDefinition Height="*" />
             <RowDefinition Height="*" />
             <RowDefinition Height="*" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="4*" />
         </Grid.RowDefinitions>
+        
         <Image wpfanimated:ImageBehavior.AnimatedSource="bg2.gif"
                wpfanimated:ImageBehavior.RepeatBehavior="1"
                wpfanimated:ImageBehavior.AnimateInDesignMode="False"
                wpfanimated:ImageBehavior.AutoStart="True"              
-               Height="535"  Grid.ColumnSpan="3" Grid.Row="0" Grid.Column="0" Grid.RowSpan="6"/>
+               Height="535"  Grid.ColumnSpan="3" Grid.Row="0" Grid.Column="0" Grid.RowSpan="7"/>
 
-        <!--<Button Content="Open File" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Center" Margin="5,5,0,10" VerticalAlignment="Center" Width="180" Height="70" x:Name="OpenFile" Click="OpenFile_Click" FontSize="20" Background="#FF6C5C4F" Foreground="White"/>
-        <Button Content="Save File" Grid.Column="1" Grid.Row="0" HorizontalAlignment="Center" Margin="0,5,5,10" VerticalAlignment="Center" Width="180" Height="70" x:Name="SaveFile" Click="SaveFile_Click" FontSize="20" Background="#FF6C5C4F" Foreground="White"/>-->
-        <Button x:Name="Add" Grid.Column="2" Grid.Row="1" Content="Add" HorizontalAlignment="Right" Margin="5,5,10,5" VerticalAlignment="Center" Width="100" Click="Add_Click" Height="50" FontSize="20" Background="#FF6C5C4F" Foreground="White"/>
-        <Button x:Name="view" Grid.Column="2" Grid.Row="2"  Content="View" HorizontalAlignment="Right" Margin="5,5,10,5" VerticalAlignment="Center" Width="100" Click="View_Click" Height="50" FontSize="20" Background="#FF6C5C4F" Foreground="White" />
-        <Button x:Name="Delete" Grid.Column="2" Grid.Row="3" Content="Delete" HorizontalAlignment="Right" Margin="5,5,10,5" VerticalAlignment="Center" Width="100" Click="Delete_Click" Height="50" FontSize="20" Background="#FF6C5C4F" Foreground="White"/>
-        <Button Content="Edit" Grid.Column="2" Grid.Row="4" HorizontalAlignment="Right" Margin="5,5,10,5" VerticalAlignment="Center" Width="100" Click="Edit_Click" Height="50" FontSize="20" Background="#FF6C5C4F" Foreground="White"/>
+        <Menu Grid.ColumnSpan="3" Grid.Row="0" Width="Auto" Height="auto" Background="Black" Foreground="#FF0C00FF" BorderBrush="#FF0068FF" BorderThickness="0,1,0,2">
+            <MenuItem Header="File" Foreground="#FF0097FF" FontSize="16" BorderBrush="#FF0068FF" BorderThickness="0,0,2,0" Background="Black">
+                <MenuItem Header="Open" Background="Black" BorderBrush="#FF0068FF" Click="OpenFile_Click"/>
+                <MenuItem Header="Save" Background="Black" BorderBrush="#FF0068FF" Click="SaveFile_Click"/>
+            </MenuItem>
+        </Menu>
 
-        <!--<ComboBox Text="File"  Grid.Row="0" Grid.ColumnSpan="3" HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" Background="Black" BorderBrush="Black" Foreground="#FF0B00FF"/>-->
-
-
-        <Rectangle Grid.Row="0" HorizontalAlignment="Left" Height="22"  VerticalAlignment="Top" Width="527" Grid.ColumnSpan="3" Fill="Black"/>
-
-        <ComboBox Background="Yellow" HorizontalAlignment="Left" Width="206" >
-            <ComboBoxItem Content="One"/>
-            <ComboBoxItem Content="Two"/>
-            <ComboBoxItem Content="Three"/>
-        </ComboBox>
-
-
-
-        <!--<Label Name="test" Content="" HorizontalAlignment="Right" Margin="81,337,-79,0" VerticalAlignment="Top" Width="539" Height="45" Grid.ColumnSpan="2"/>
--->
-
+        <Button x:Name="Add" Grid.Column="2" Grid.Row="2" Content="Add" HorizontalAlignment="Right" Margin="5,5,10,5" VerticalAlignment="Center" Width="100" Click="Add_Click" >
+        </Button>
+        <Button x:Name="view" Grid.Column="2" Grid.Row="3"  Content="View" HorizontalAlignment="Right" Margin="5,5,10,5" VerticalAlignment="Center" Width="100" Click="View_Click"/>
+        <Button x:Name="Delete" Grid.Column="2" Grid.Row="4" Content="Delete" HorizontalAlignment="Right" Margin="5,5,10,5" VerticalAlignment="Center" Width="100" Click="Delete_Click"/>
+        <Button x:Name="Edit" Grid.Column="2" Grid.Row="5" Content="Edit" HorizontalAlignment="Right" Margin="5,5,10,5" VerticalAlignment="Center" Width="100" Click="Edit_Click"/>
 
         <DataGrid SelectionMode="single" 
                   Name="myDataGrid"
                   Grid.Column="0"
                   Grid.Row="1"
                   Grid.ColumnSpan="2"
-                  Grid.RowSpan="4"
+                  Grid.RowSpan="6"
                   AutoGenerateColumns="False" 
                   HorizontalAlignment="Center" 
-                  Height="385" 
+                  Height="auto" 
                   IsReadOnly="True" 
                   Margin="10" 
-                  VerticalAlignment="Center"  
+                  VerticalAlignment="Top"  
                   FontSize="20" 
-                  Width="394" Foreground="#FF764949" Background="White" FontWeight="Bold" HeadersVisibility="Column" 
+                  Width="394" 
+                  Foreground="#FFB27200" 
+                  FontWeight="Bold" 
+                  HeadersVisibility="Column" 
+                  BorderBrush="Orange" 
+                  BorderThickness="2"
+                  HorizontalGridLinesBrush="Orange"
+                  VerticalGridLinesBrush="Transparent"
                   >
 
             <DataGrid.Resources>
                 <Style TargetType="DataGridRow">
                     <EventSetter Event="MouseDoubleClick" Handler="Row_DoubleClick"/>
                 </Style>
+                <Style TargetType="{x:Type DataGridColumnHeader}">
+                    <Setter Property="Background" Value="Black"/>
+                    <Setter Property="BorderBrush" Value="Orange"/>
+                    <Setter Property="BorderThickness" Value="0,0,0,2"/>
+                </Style>
             </DataGrid.Resources>
 
-            <DataGrid.Columns >
-                <DataGridTextColumn x:Name="id" Header="Id" Binding="{Binding Id}" MaxWidth="30" MinWidth="30" Visibility="Hidden"/>
-                <DataGridTextColumn x:Name="firstName" Header="First Name" Binding="{Binding FirstName}" Width="195" />
-                <DataGridTextColumn x:Name="lastName" Header="Last Name" Binding="{Binding LastName}" Width="195" />
-                <DataGridTextColumn x:Name="phoneNum" Header="Phone Number" Binding="{Binding PhoneNum}" MaxWidth="100" MinWidth="100" Visibility="Hidden" />
-                <DataGridTextColumn x:Name="email" Header="Email" Binding="{Binding Email}" MaxWidth="250" MinWidth="250" Visibility="Hidden" />
-
+            <DataGrid.Columns>
+                <DataGridTextColumn x:Name="firstName" Header="First Name" Binding="{Binding FirstName}" Width="195"  MaxWidth="195" MinWidth="195"/>
+                <DataGridTextColumn x:Name="lastName" Header="Last Name" Binding="{Binding LastName}" Width="195" MaxWidth="195" MinWidth="195"/>
             </DataGrid.Columns>
         </DataGrid>
-
-
-
+        
     </Grid>
 </Window>
